# Partitioned-matchmaking-service

./: .dockerignore  .env.example  .gitignore  Contracts.md  Dockerfile  LICENSE  README.md  Roadmap.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: config.py  main.py
app/api/: main.py
app/callback_dispatcher/: http.py  main.py  metrics.py
app/core/: admission.py  config.py  idempotency.py  metrics.py  tenants.py
app/db/: connection.py  init.py  init.sql  migrate.py  postgres.py  redis.py  schema.sql
app/mock_callback/: main.py
app/models/: schemas.py  (+1 more)
loadtests/: elasticity-k6-2026-07-12-2129.summary.json  elasticity.js  idempotency.js  noisy_tenant.js  results-gke-2026-07-11-1748.md  results-gke-2026-07-11-1842.md  results-gke-2026-07-11-1950.md  results-gke-2026-07-12-1455.md  results-gke-2026-07-12-1735.md  results-gke-e2-standard-8-2026-07-12.md  results-gke-elasticity-2026-07-12-2129.md  results-gke-scale-up-synthesis-2026-07-12.md  results-gke-synthesis-2026-07-11.md  results.md  scale_out.js
scripts/: integration_test_e2e.py  integration_test_worker.py  parse_k6_summary.py  run_elasticity_test.py  run_gke_benchmark.cmd  run_gke_benchmark.py  sample_worker_metrics.py  scale_k8s_benchmark.sh  validate_local.ps1  validate_worker_metrics.py
tests/: test_admission.py  test_callback_dispatcher.py  test_callback_dispatcher_metrics.py  test_fetch_freshness_db.py  test_idempotency.py  test_matching_freshness.py  test_mock_callback.py  test_scheduling.py  test_worker_elasticity.py  test_worker_metrics.py
(+27 files in other folders)
